css/sidebar.css
.sidebar-top-announcement {
    width: 100%;
    height: 72px;
    background: center no-repeat;
    background-size: cover;
    background-image: url(/img/Discord_Rectangle.png);
    background-color: #ffffff;
}

.sidebar-top-announcement[style*="!important"] {
    background: none;
    cursor: auto;
}

@media only screen and (min-width: 999px) {
    .sidebar-container {
        max-width: 337px;
        /* height: 100vh; */
        height: 100%;
        /* overflow-y: scroll; */
    }
}

.sidebar-container>*:first-child {
    margin-top: .3em;
}

.sidebar-container>* {
    margin-bottom: 10px;
}

.sidebar-container>*:not(:first-child) {
    display: none;
}

/* Hide scrollbar for Chrome, Safari and Opera */
.sidebar-container::-webkit-scrollbar {
    display: none;
}

/* Hide scrollbar for IE and Edge */

.sidebar-container {
    -ms-overflow-style: none;
}

@media only screen and (min-width: 1000px) {
    .sidebar-top-announcement {
        height: 268px;
        background-image: url(/img/Discord_Square.png);
    }
    .sidebar-container {
        right: 0;
        position: absolute;
    }
    .sidebar-container>*:first-child {
        margin-top: 0;
    }
    .sidebar-container>*:not(:first-child) {
        display: block;
    }
}

@media only screen and (min-width: 999px) and (max-width: 1444px) {
    .sidebar-container {
        height: 100vh;
        overflow-y: scroll;
        position: fixed;
        padding-bottom: 100px;
    }
}

